[package]
name = "piston_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"
piston_window = "0.124.0"
rusttype = "0.9.2"
